--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col-12 col-md-auto">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
